--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2 style="margin-top: 20px;">Pi Korea Music Test</h2>
     <script>
         const Pi = window.Pi;
-        Pi.init({ version: "1.5" });
-        GCGM56MUOBYTNLFZ6OJASNF4QSELXUEOUBCQRKUGGDPE2JAID75WQ4RC
+        Pi.init({ version: "1.5", sandbox: true, appId: "bebemama-7b0f8ad69f2fa423" });
+</script>
+</body>
 </html>
